@@ -38,9 +38,9 @@
 		<span><b>2020-10-24</b></span>
 		<div id="changelog20201024">
 			<ul>
-				<li>Added Antonio's set</li>
-				<li>Added Bankruptcy set</li>
 				<li>Added Lost Dragon MvP</li>
+				<li>Added Greater Agimat food</li>
+				<li>Added Bankruptcy and Antonio's set</li>
 				<li>Fixed Final Strike damage computation</li>
 				<li>Fixed Book of Charms class restriction</li>
 				<li>Fixed Savage pet and Scuba Mask script</li>
