@@ -1,4 +1,5 @@
 [2020-10-26]
+- Added Greater Agimat food
 - Fixed Giant Shield refine bonus
 
 [2020-10-24]
